# code-interpreter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build-push.yml  helm-release.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: executor.py
code-interpreter/app/services/: executor_kubernetes.py
code-interpreter/tests/e2e/: test_basic_flow.py
code-interpreter/tests/integration_tests/: test_data_stack.py
kubernetes/code-interpreter/: Chart.yaml
tests/: test_data_stack.py  test_hello_world.py
